<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AppKhamBenh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="account">Tài khoản</string>
    <string name="enter_account">Nhập tài khoản</string>
    <string name="enter_enough_info">Vui lòng nhập đầy đủ thông tin</string>
    <string name="fail_email">Email không đúng định dạng</string>
    <string name="fail_password">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="login_with_doctor"><u>Đăng nhập với Bác sĩ</u></string>
    <string name="please_enter_info">Vui lòng nhập lại mật khẩu</string>
    <string name="remember_password">Nhớ mật khẩu</string>
    <string name="have_you_account">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng kí</string>
    <string name="enter_password_again">Vui lòng nhập lại mật khẩu</string>
    <string name="title_register_account">Đăng kí tài khoản</string>
    <string name="title_name">Họ và tên</string>
    <string name="enter_name">Nhập họ tên</string>
    <string name="title_email">Email</string>
    <string name="enter_email">Nhập email</string>
    <string name="title_sex">Giới tính</string>
    <string name="title_specialist">Chuyên khoa</string>
    <string name="enter_specialist">Nhập chuyên khoa</string>
    <string name="password">Mật khẩu</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="title_repeat_password">Nhập lại mật khẩu</string>
    <string name="title_date">Ngày sinh</string>
    <string name="enter_date">dd/mm/yyyy</string>
    <string name="title_phone">Số điện thoại</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="title_address">Địa chỉ</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="warning_phone">Số điện thoại không đúng định dạng</string>
    <string name="select_user">Chọn đối tượng đăng kí</string>
    <string name="patient">Bệnh nhân</string>
    <string name="doctor">Bác sĩ</string>
    <string name="agree_condition">Tôi đồng ý với tất cả điều khoản</string>
    <string name="cancel">Huỷ</string>
    <string name="at"><b>lúc</b></string>
    <string name="csyt">Cơ sở y tế</string>
    <string name="update_avt">Cập Nhật Ảnh Đại Diện</string>
    <string name="edit_time_working">Chỉnh sửa thời gian làm việc</string>
    <string name="add_hour_working">Thêm giờ làm việc</string>
    <string name="enter_time_working">Nhập thời gian làm việc</string>
    <string name="have_not_time">Chưa có giờ làm việc</string>
    <string name="infor_medicine">Thông tin thuốc tham khảo</string>
    <string name="notification">Thông báo</string>
    <string name="select">Chọn</string>
    <string name="select_time">Chọn thời gian</string>
    <string name="update">Cập nhật</string>
    <string name="select_service">Chọn dịch vụ khám</string>
    <string name="service">Dịch vụ khám</string>
    <string name="select_department">Chọn phòng khám</string>
    <string name="department">Nhập phòng khám</string>
    <string name="select_doctor">Chọn bác sĩ</string>
    <string name="day">Ngày</string>
    <string name="hour">Giờ</string>
    <string name="reason">Triệu chứng/Lý do</string>
    <string name="enter_reason">Nhập triệu chứng...</string>
    <string name="register_checking">Đăng Ký Khám</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="enter_password_old">Nhập mật khẩu cũ: </string>
    <string name="enter_password_new">Nhập mật khẩu mới: </string>
    <string name="show_password">Hiển thị mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="create_password">Tạo mật khẩu mới</string>
    <string name="pay">Thanh toán</string>
    <string name="book">Đặt lịch</string>
    <string name="functions">Các chức năng</string>
    <string name="infor_user">Thông Tin Người Dùng</string>
    <string name="name_user">Tên người dùng: </string>
    <string name="email_user">Email: </string>
    <string name="sex_user">Giới tính: </string>
    <string name="males">Nam</string>
    <string name="females">Nữ</string>
    <string name="birth_user">Ngày Sinh: </string>
    <string name="phone_user">Số điện thoại: </string>
    <string name="address_user">Địa chỉ: </string>
    <string name="update_info">Cập nhật thông tin</string>
    <string name="ministry_of_health">Bộ Y Tế</string>
    <string name="list_appoint">Danh Sách Lịch Hẹn</string>
    <string name="before">Trước đó</string>
    <string name="update_info_person">Cập nhật thông tin cá nhân</string>
    <string name="note_update_info_person">Cập nhật đầy đủ và chính xác thông tin của bạn \nđể nhận được các kết quả khám từ đối tác của \napp và +5000 điểm tích luỹ</string>
    <string name="setting">Cài đặt</string>
    <string name="title_language">Ngôn ngữ/ Language</string>
    <string name="language">Tiếng Việt</string>
    <string name="notification_fail">Báo lỗi</string>
    <string name="condition">Điều khoản sử dụng</string>
    <string name="delete_account">Xoá tài khoản</string>
    <string name="logout">Đăng xuất</string>
    <string name="select_time_checking">Chọn thời gian khám</string>
    <string name="book_now">Đặt khám ngay</string>
    <string name="go_to_doctor">Khám bác sĩ</string>
    <string name="note_doctor">Kết nối với các bác sĩ chuyên khoa đầu ngành</string>
    <string name="health_services">Dịch vụ y tế</string>
    <string name="note_health_services">Sàng lọc Sar-cov-2, gói khám sức khoẻ,…</string>
    <string name="note_csyt">Tiếp đón ưu tiên tại các bệnh viên, phòng khám hàng đầu</string>
    <string name="confirm_delete_time">Xác Nhận Xoá Thời Gian</string>
    <string name="delete">Xoá</string>
    <string name="search_appoint">Tìm kiếm lịch hẹn</string>
    <string name="search_csyt">Tìm kiếm cơ sở y tế</string>
    <string name="cancel_appoint">Huỷ lịch hẹn</string>
    <string name="patient_appoint">Bệnh nhân:</string>
    <string name="time_appoint">Thời gian:</string>
    <string name="in_appoint">Tại:</string>
    <string name="detail">Chi tiết</string>
    <string name="collapse">Thu gọn</string>
    <string name="doctor_appoint">Bác sĩ:</string>
    <string name="reason_appoint">Triệu chứng/Lí do:</string>
    <string name="booked">Đã được đặt</string>
    <string name="select_language">Chọn ngôn ngữ/ Choose Language</string>
    <string name="close">Đóng</string>
    <string name="doctor_hightlight">Bác sĩ nổi bật</string>
    <string name="see_more">Xem thêm</string>
    <string name="appoint_doctor">Đặt hẹn bác sĩ</string>
    <string name="examination_schedule">Lịch khám</string>
    <string name="hospital_examination">Khám theo bệnh viện</string>
    <string name="examination_results">Kết quả khám bệnh</string>
    <string name="check_service">Khám dịch vụ</string>
    <string name="medical_examination_history">Lịch sử khám bệnh</string>
    <string name="contact">Liên hệ</string>
    <string name="drug_information">Thông tin thuốc</string>
    <string name="home">Trang chủ</string>
    <string name="community">Cộng đồng chat với bác sĩ</string>
    <string name="book_examination">Đặt khám</string>
    <string name="doctor_has_experience">Bác Sĩ có nhiều kinh nghiệm</string>
    <string name="priority_to_check">Ưu tiên Check in qua app</string>
    <string name="book_online">Đặt lịch khám online</string>
    <string name="manage_appointment">Quản lí lịch hẹn</string>
    <string name="medical_handbook">Cẩm nang y tế</string>
    <string name="info_hospital">Thông tin cơ sở y tế</string>
    <string name="number_book">Lượt đặt khám</string>
    <string name="evaluate">Đánh giá</string>
    <string name="see_schedule"><u>Xem lịch</u></string>
    <string name="info_hospital_under_text"><u>Thông tin cơ sở y tế</u></string>
    <string name="doctor_specialist">Bác sĩ chuyên khoa</string>
    <string name="latest_medical_schedule">Lịch khám gần nhất</string>
    <string name="online_counseling">Tư vấn trực tuyến</string>
    <string name="consulting_doctor">Bác sĩ tư vấn</string>
    <string name="search_doctor">Chuyên khoa, triệu chứng, bác sĩ</string>
    <string name="make_an_appoint">Đặt lịch khám</string>
    <string name="edit_appoint">Chỉnh sửa lịch hẹn</string>
    <string name="save_appointment_changes">Lưu thay đổi lịch hẹn</string>
    <string name="different">Khác</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="check_internet">Bạn đang ngoại tuyến, Vui lòng kiểm tra lại đường truyền</string>
    <string name="update_infor_success">Bạn đã cập nhật lại thông tin cá nhân thành công</string>
    <string name="infor_doctor">Thông tin bác sĩ</string>
    <string name="see_all_date"><u>Xem tất cả lịch</u></string>
    <string name="work_experience">Kinh nghiệm làm việc</string>
    <string name="price">Giá khám:</string>
    <string name="number_of_appointments">Lượt hẹn khám</string>
    <string name="number_of_medical_calls">Lượt gọi khám</string>
    <string name="consulting_turn">Lượt tư vấn</string>
    <string name="order_with_doctor">ĐẶT THEO BÁC SĨ</string>
    <string name="order_by_service">ĐẶT THEO DỊCH VỤ</string>
    <string name="my_favourites">Tính năng của tôi</string>
    <string name="new_favourites">Mới</string>
    <string name="top_medical_facility">Cơ sở y tế hàng đầu</string>
    <string name="change_appoint_successful">Bạn đã thay đổi lịch hẹn thành công</string>
    <string name="at_medical_facility">Tại cơ sở y tế</string>
    <string name="note_CCCD">Quét CCCD để nhập nhanh thông tin</string>
    <string name="CCCD">Số Căn cước/ CMTND</string>
    <string name="enter_CCCD">Nhập số CCCD</string>
    <string name="ethnic">Dân tộc</string>
    <string name="search_ethnic">Tìm kiếm dân tộc</string>
    <string name="nationality">Quốc tịch</string>
    <string name="search_nationality">Tìm kiếm quốc tịch</string>
    <string name="job">Nghề nghiệp</string>
    <string name="search_job">Tìm kiếm nghề nghiệp</string>
    <string name="select_job">Lựa chọn nghề nghiệp</string>
    <string name="note_scan">Di chuyển camera đến vùng chứa mã QR để quét</string>
    <string name="select_province">Chọn Tỉnh/Thành phố</string>
    <string name="select_district">Chọn Quận/ Huyện</string>
    <string name="select_ward">Chọn Xã/ Phường</string>
    <string name="complete">Hoàn thành</string>
    <string name="search_address">Tìm kiếm địa chỉ</string>
    <string name="title_scan">Quét mã CCCD</string>
    <string name="enter_number_house">Nhập số nhà, tên đường</string>
    <string name="update_avatar_successful">Bạn đã cập nhật ảnh đại diện</string>
    <string name="infor_appoint">Thông tin đặt hẹn</string>
    <string name="examination_specialist">Chuyên khoa khám</string>
    <string name="doctor_service">Bác sĩ/dịch vụ</string>
    <string name="hour_appoint">Giờ hẹn:</string>
    <string name="choose_someone_to_examine">Chọn người tới khám</string>
    <string name="total_money">Tổng tiền</string>
    <string name="confirm">XÁC NHẬN</string>
    <string name="online_consultation_schedule">Lịch tư vấn trực tuyến</string>
    <string name="time">Thời gian</string>
    <string name="add_members">Thêm thành viên</string>
    <string name="contine">Tiếp tục</string>
    <string name="choose_a_maximum_of_5_photos">Bạn chỉ được chọn tối đa 5 ảnh</string>
    <string name="pending_ex" tools:ignore="MissingTranslation">Chờ duyệt</string>
    <string name="approved_ex" tools:ignore="MissingTranslation">Đã duyệt</string>
    <string name="examining_ex" tools:ignore="MissingTranslation">Đang khám</string>
    <string name="complete_ex" tools:ignore="MissingTranslation">Hoàn thành</string>
    <string name="too_late_ex" tools:ignore="MissingTranslation">Quá hẹn</string>
    <string name="canceled_ex" tools:ignore="MissingTranslation">Đã huỷ</string>
</resources>