<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dimen_330"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_2"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:gravity="center"
            android:text="@string/enter_time_working"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sp22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edtDialogTimeWorking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_30"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/bg_select_time"
            android:gravity="center"
            android:hint="@string/select_time"
            android:paddingVertical="@dimen/dimen_10"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sp16" />

        <TextView
            android:id="@+id/txtDialogUpdateTimeWorking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/corners_text_view"
            android:paddingHorizontal="@dimen/dimen_20"
            android:paddingVertical="@dimen/dimen_10"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_sp16" />
    </LinearLayout>
</androidx.cardview.widget.CardView>