<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_kham"
    tools:context=".ui.ui.login.FragmentLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_15"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_50"
                    android:layout_height="@dimen/dimen_50"
                    android:src="@drawable/icon_y_te" />

                <TextView
                    style="@style/text_sp16_black_bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:gravity="center"
                    android:maxWidth="@dimen/dimen_70"
                    android:text="@string/ministry_of_health"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            style="@style/text_sp16_color_text_bold"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/login"
            android:textSize="@dimen/dimen_sp32" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_2"
                android:layout_marginTop="@dimen/dimen_2"
                android:layout_marginBottom="@dimen/dimen_20"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10">

                    <TextView
                        style="@style/text_sp14_color_text_bold"
                        android:text="@string/account" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/dimen_27"
                            android:layout_height="@dimen/dimen_27"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/dimen_5"
                            android:background="@drawable/ic_action_account"
                            android:backgroundTint="@color/background" />

                        <EditText
                            android:id="@+id/edtAccount"
                            style="@style/edit_sp16"
                            android:layout_marginStart="@dimen/dimen_15"
                            android:hint="@string/enter_account"
                            android:inputType="textEmailAddress" />
                    </LinearLayout>

                    <TextView
                        style="@style/text_sp14_color_text_bold"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/password" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginBottom="@dimen/dimen_40">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/dimen_20"
                                android:layout_height="@dimen/dimen_20"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/dimen_5"
                                android:background="@drawable/ic_action_change_password"
                                android:backgroundTint="@color/background" />

                            <EditText
                                android:id="@+id/edtPassword"
                                style="@style/edit_sp16"
                                android:layout_marginStart="@dimen/dimen_15"
                                android:hint="@string/enter_password"
                                android:inputType="textPassword"
                                android:maxWidth="@dimen/dimen_150" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/showPassword"
                            android:layout_width="@dimen/dimen_25"
                            android:layout_height="@dimen/dimen_25"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/dimen_10"
                            android:background="@drawable/icon_hint_grey" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/text"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_110"
                    android:paddingVertical="@dimen/dimen_15"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_sp16" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/notificationLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/please_enter_info"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sp14"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background"
                android:paddingHorizontal="@dimen/dimen_5"
                android:paddingTop="@dimen/dimen_5"
                android:text="@string/remember_password"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_sp16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/text_sp14"
                android:text="@string/have_you_account" />

            <TextView
                android:id="@+id/register"
                style="@style/text_sp14_color_text_bold"
                android:layout_marginStart="@dimen/dimen_10"
                android:text="@string/register"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>