<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_10"
    android:layout_marginTop="@dimen/dimen_20"
    android:layout_marginBottom="@dimen/dimen_10"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarManage"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                android:src="@drawable/user_ad" />

            <LinearLayout
                android:id="@+id/llCancelAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_sp14"
                    android:text="@string/cancel_appoint"
                    android:textColor="@color/background" />

                <ImageView
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="@dimen/dimen_22"
                    android:layout_marginStart="@dimen/dimen_2"
                    android:src="@drawable/ic_action_cancel_appointment" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/bg_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/text_sp14_black_bold"
                    android:text="@string/patient_appoint" />

                <TextView
                    android:id="@+id/txt_name_patient"
                    style="@style/text_sp14"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:text="Nguyễn Hữu Linh" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editAppoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_sp14"
                    android:text="@string/edit"
                    android:textColor="@color/background" />

                <ImageView
                    android:layout_width="@dimen/dimen_18"
                    android:layout_height="@dimen/dimen_18"
                    android:layout_marginStart="@dimen/dimen_2"
                    android:background="@drawable/ic_action_edit_department_clinic"
                    android:backgroundTint="@color/background" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <TextView
                style="@style/text_sp14_black_bold"
                android:text="@string/time_appoint" />

            <TextView
                android:id="@+id/txt_time_appointment"
                style="@style/text_sp14"
                android:layout_marginStart="@dimen/dimen_5"
                android:text="Thứ tư, 18 tháng 3 lúc 10:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_sp14_black_bold"
                    android:text="@string/in_appoint" />

                <TextView
                    android:id="@+id/txt_address"
                    style="@style/text_sp14"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:text="Khoa điều trị tạm thời" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtExpand"
                    style="@style/text_sp12_no_color"
                    android:text="@string/detail"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imgExpand"
                    android:layout_width="@dimen/dimen_20"
                    android:layout_height="@dimen/dimen_20"
                    android:src="@drawable/ic_action_expand" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExpand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_service"
                style="@style/text_sp14_no_color"
                android:text="Khám tự nguyện"
                android:textSize="@dimen/dimen_sp14"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - " />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15">

                <TextView
                    style="@style/text_sp14_color_text_bold"
                    android:text="@string/doctor_appoint" />

                <TextView
                    android:id="@+id/txt_name_doctor"
                    style="@style/text_sp14_color_text_bold"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:text="Phan Văn Hùng" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_sp14_black_bold"
                    android:text="@string/reason_appoint" />

                <TextView
                    android:id="@+id/txt_reasons"
                    style="@style/text_sp14"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:text="Sốt nhẹ, cảm cúm" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>